main.css
html,
body {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #7e80a2;
    scrollbar-gutter: stable;
}

h1,
h2,
h3,
h4 {
    font-weight: normal;
    margin: 0;
}

li {
    font-size: 20px;
    list-style-type: none;
}

a {
    text-decoration: none;
    color: inherit;
}

#title-wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transform-origin: top;
    transition-duration: 1s;
}

#melvin-title {
    font-size: 63.3px;
}

#title-container {
    display: flex;
    position: relative;
    justify-content: center;
    width: 400px;
    padding: 20px;
    animation: fall-intro 2s;
}

#title-container h1 {
    text-align: right;
}

@keyframes fall-intro {
    0% {
        filter: opacity(0);
        transform: translateY(-50%);
    }
}

#menu-list {
    border-left: 2px dotted #65678cb9;
    padding-left: 20px;
    margin: 0;
    margin-left: 20px;
    align-self: stretch;
    display: flex;
    flex-direction: column;
    gap: 19px;
}

#menu-list li {
    transition-duration: 0.5s;
}

#menu-list li:hover {
    transform-origin: left;
    transform: scale(1.15);
}

#menu-list a {
    animation: list-intro 1s;
}

#menu-list a:nth-child(2) {
    animation-delay: 0.1s;
}

#menu-list a:nth-child(3) {
    animation-delay: 0.2s;
}

@keyframes list-intro {
    0% {
        transform: translateX(+50%);
    }
}

#content-container {
    margin-top: 105px;
    position: absolute;
    top: 47%;
    left: 50%;
    transform: translateX(-50%);
    width: 460px;
    transition-duration: 1s;
    scrollbar-gutter: stable;
}

#digital-art,
#programming,
#about {
    position: absolute;
    text-align: justify;
    visibility: hidden;
    opacity: 0;
    padding-bottom: 200px;
    margin-top: 0;
    scroll-margin: 105px;
    transition-duration: 1s;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: none;
}

::-webkit-scrollbar-thumb {
    background: #77789671;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: #77789689;
}

